[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fusion"
version = "0.9.0"
description = "An experimental state manager"
authors = [{ name = "Petko Dichev", email = "pditchev@gmail.com" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["attrs", "peewee"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "isort", "pre-commit"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
